<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mobile"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_email"
        android:padding="14dp"
        android:background="@drawable/bg_field"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableTint="@color/main"
        android:drawablePadding="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="@color/main"
        android:textColor="@color/main"
        android:inputType="textEmailAddress"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:padding="14dp"
        android:background="@drawable/bg_field"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/main"
        android:drawablePadding="14dp"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="@color/main"
        android:textColor="@color/main"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonLongin"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_field"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/not_have"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLongin" />

</androidx.constraintlayout.widget.ConstraintLayout>